Made manipulation of last state in first part of paths to join asymmetrical. Only copy transit state if first part is transit